2003-04-29  Ross Burton  <ross@burtonini.com>

	* configure.in: Version 0.2.

2003-04-25  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add a Strip Special Characters option, split the filename pattern
	into path and filename. Then did some UI tweaks suggested by
	Christian Neumair.
	
	* data/sound-juicer.schemas.in:
	Declare the strip_special, path_pattern and file_pattern
	keys. Remove pattern as it was never used. Add a default for the
	paranoia key.

	* src/Makefile.am:
	Turn on -Werror.

	* src/sj-main.c:
	Check SjExtractor was created OK, and monitor strip_special,
	file_pattern and path_pattern keys.

	* src/sj-extracting.c:
	Update for small changes, and use the path/file patterns.

	* src/sj-prefs:
	Initial code for setting the path and file patterns.

2003-04-25  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.[ch]:
	Added sj_extractor_get_new_error() to see if the construction of
	SjExtractor worked or failed.

	* NEWS:
	* README:
	* TODO:
	Updated.

2003-04-24  Ross Burton  <ross@burtonini.com>

	* src/sj-about.c: 
	Don't mark the copyright string as translatable and use the
	correct Unicode character for the copyright symbol.
	
2003-04-24  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Use the correct variables when setting the pattern.

	* src/sj-extracting.c:
	Fix a minor logic bug in the pattern parser, and add a break.

2003-04-24  Ross Burton  <ross@burtonini.com>

	* .cvsignore:
	Ignore the generated spec file.

	* src/sj-extracting.c:
	Instead of hardcoding the output filename, use a GConf key and
	pattern subsitution.

	* src/sj-prefs.c:
	Nicer path selection dialog title.

	* src/sound-juicer.h:
	Make more fields public.
	
	* data/sound-juicer.schemas.in:
	* src/sj-main.c:
	* src/sj-extractor.c:
	* src/sj-extractor.h:
	Allow the user to set the paranoia level with a GConf key. Patch
	from foser@gentoo.org.

	* TODO:
	Updated.

2003-04-22  Christian Neumair  <chris@gnome-de.org>
