@@ -1,5 +1,10 @@
 2003-04-29  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c (build_filename):
+	Actually build the filename correctly. Damn fool!
+
+2003-04-29  Ross Burton  <ross@burtonini.com>
+
 	* configure.in: Version 0.2.
 
 2003-04-25  Ross Burton  <ross@burtonini.com>
